packages/ingest/container-rust/tests/ui/xmlspec/fail/invalid_text_except.rs
use usc_ingest::xmlspec;

xmlspec! {
    schema BadTextExcept {
        record Item
        from tag("item")
        {
            value: text(desc("value"), bad(desc("note"))),
        }
    }
}

fn main() {}
